--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,12 @@
     <groupId>1</groupId>
     <artifactId>1</artifactId>
     <version>1</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
